--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -71,7 +71,7 @@
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
-    
+    href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing"
     target="_blank">
     <img alt="Jornada3.jpg"
          class="imagen"
@@ -86,7 +86,7 @@
     <img src="Jornada4.jpg" height="333" width="490"/></a></div>
 
 <a
-  
+  href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing"
   target="_blank">
   <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
     <em>
