--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -25,7 +25,7 @@
 <div class="max-w-6xl mx-auto p-6">
   <header class="flex items-center justify-between mb-6">
     <div>
-      <h1 class="text-2xl font-extrabold">E.F.M.O. Boadilla 'B'</h1>
+      <h1 class="text-2xl font-extrabold">Fantasy EFMO</h1>
       <p class="text-slate-400 text-sm">Puntos, estadísticas, y mucho más</p>
     </div>
   </header>
