--- a/EncuestasMVP2526.html
+++ b/EncuestasMVP2526.html
@@ -44,7 +44,7 @@
 
   <div style="padding: 10px; float: left; width: 45%; text-align: center;">
     <a
-      href="https://forms.gle/F6u9akCxKyjrq9bn9"
+      href="https://docs.google.com/document/d/1GbBQJ9tJLsvOQ-UiH0B0CwADG65vRMCfxA41qxSeo88/edit?usp=sharing"
       target="_blank">
       <img alt="Jornada1"
            class="imagen"
@@ -52,14 +52,14 @@
       <img src="Jornada1.jpg" height="333" width="490"/></a></div>
   <div style="padding: 10px; float: right; width: 45%; text-align: center;">
     <a
-      
+      href="https://forms.gle/zKmHniJWq751EZVi6"
       target="_blank">
       <img alt="Jornada2"
            class="imagen"
       <img src="Jornada2.jpg" height="333" width="490"/></a></div>
 
   <a
-    href="https://forms.gle/F6u9akCxKyjrq9bn9"
+    href="https://docs.google.com/document/d/1GbBQJ9tJLsvOQ-UiH0B0CwADG65vRMCfxA41qxSeo88/edit?usp=sharing"
     target="_blank">
     <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
       <em>
@@ -67,7 +67,7 @@
       </em></div>
   </a>
   <a
-    
+    href="https://forms.gle/zKmHniJWq751EZVi6"
     target="_blank">
     <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
       <em>
