--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -67,12 +67,20 @@
       <h3 class="font-semibold mb-2">Noticias / Lesiones</h3>
       <div id="injuryFeed" class="space-y-3 text-sm text-slate-300">
         <div class="p-2 bg-slate-800 rounded text-sm">
-          <div class="font-medium">Duda: J. Agudo </div>
-          <div class="text-slate-400 text-xs">Molestias musculares en el cuádriceps, indeterminado</div>
+          <div class="font-medium">Duda: Adriano </div>
+          <div class="text-slate-400 text-xs">Golpe en el talón, 2-4 días</div>
+        </div>
+        <div class="p-2 bg-slate-800 rounded text-sm">
+          <div class="font-medium">Lesión: J. Agudo </div>
+          <div class="text-slate-400 text-xs">Rotura fibrilar en el cuádriceps, 2-4 semanas</div>
         </div>
         <div class="p-2 bg-slate-800 rounded text-sm">
           <div class="font-medium">Jornada 2</div>
           <div class="text-slate-400 text-xs">E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones</div>
+        </div>
+        <div class="p-2 bg-slate-800 rounded text-sm">
+          <div class="font-medium">Lesión: Pablo </div>
+          <div class="text-slate-400 text-xs">Fractura de muñeca, 3-6 semanas</div>
         </div>
         <div class="p-2 bg-slate-800 rounded text-sm">
           <div class="font-medium">Duda: Gabri </div>
