--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -130,7 +130,7 @@
 
 <script>
 const players = [
-  { id:1, name:'J. Agudo', pos:'Portero', status:'Duda', performances:[
+  { id:1, name:'J. Agudo', pos:'Portero', status:'Lesionado', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:54, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
@@ -170,7 +170,7 @@ const players = [
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:9, name:'Adriano', pos:'Defensa', status:'OK', performances:[
+  { id:9, name:'Adriano', pos:'Defensa', status:'Duda', performances:[
     {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
     {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
@@ -210,7 +210,7 @@ const players = [
     {points:null, minutes:75, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', performances:[
+  { id:17, name:'Pablo', pos:'Centrocampista', status:'Lesionado', performances:[
     {points:4, minutes:69, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,9)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
