--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -373,6 +373,16 @@ function openModal(id){
   document.getElementById('modalAvgPoints').textContent = calculateAvg(p.performances);
 
   const perfDiv=document.getElementById('modalPerformances'); perfDiv.innerHTML='';
+   
+  // 📰 Mostrar noticia asociada (si existe)
+  const playerNews = news.find(n => n.playerId === p.id);
+  if (playerNews) {
+    const newsDiv = document.createElement('div');
+    newsDiv.className = 'p-2 bg-slate-700 rounded text-xs text-red-300 italic mb-2';
+    newsDiv.innerHTML = `🩺 <strong>${playerNews.title}:</strong> ${playerNews.text}`;
+    perfDiv.appendChild(newsDiv);
+  }
+
   p.performances.forEach((perf,i)=>{
     const div=document.createElement('div');
     div.className='p-2 bg-slate-700 rounded flex justify-between items-center';
