--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -62,7 +62,7 @@
           <option value="Duda">Duda</option>
         </select>
       </div>
-
+    
       <hr class="my-4 border-slate-700"/>
       <h3 class="font-semibold mb-2">Noticias / Lesiones</h3>
       <div id="injuryFeed" class="space-y-3 text-sm text-slate-300">
@@ -100,7 +100,7 @@
         </div>
       </div>
     </section>
-
+    
     <section class="lg:col-span-2">
       <div id="playerList" class="glass p-3 rounded-lg overflow-hidden">
         <div id="gridView" class="grid gap-3 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-3"></div>
@@ -258,14 +258,14 @@ const players = [
 
 // 📰 Noticias del equipo
 const news = [
-  { playerId: 9, title: 'Duda', text: 'Golpe en el talón, 2-4 días' },
-  { playerId: 1, title: 'Lesión', text: 'Rotura fibrilar en el cuádriceps, 2-4 semanas' },
-  { playerId: null, title: 'Jornada 2', text: 'E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones' },
-  { playerId: 17, title: 'Lesión', text: 'Fractura de muñeca, 3-6 semanas' },
-  { playerId: 2, title: 'Duda', text: 'Enfermedad, 2-7 días' },
-  { playerId: null, title: 'Jornada 1', text: 'Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'' },
-  { playerId: 19, title: 'Lesión', text: 'Desconocido, 2 semanas' },
-  { playerId: 21, title: 'Lesión', text: 'Desconocido, baja indeterminada' }
+  { playerId: 9, title: 'Duda', text: "Golpe en el talón, 2-4 días" },
+  { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
+  { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones" },
+  { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 3-6 semanas" },
+  { playerId: 2, title: 'Duda', text: "Enfermedad, 2-7 días" },
+  { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
+  { playerId: 19, title: 'Lesión', text: "Desconocido, 2 semanas" },
+  { playerId: 21, title: 'Lesión', text: "Desconocido, baja indeterminada" }
 ];
   
 // Render helpers
