--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -64,7 +64,7 @@
       </div>
     
       <hr class="my-4 border-slate-700"/>
-      <h3 class="font-semibold mb-2">Noticias / Lesiones</h3>
+      <h3 class="font-semibold mb-2">Noticias</h3>
       <div id="injuryFeed" class="space-y-3 text-sm text-slate-300">
     
     </section>
@@ -226,6 +226,7 @@ const players = [
 
 // 📰 Noticias del equipo
 const news = [
+  { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" },
   { playerId: 9, title: 'Duda', text: "Golpe en el talón, 2-4 días" },
   { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
   { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones" },
