--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </em></div>
 </a>
 <a
-  href="InformesPost-partido.html"
+  href="InformesPost_partido.html"
   target="_blank">
   <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
     <em>
