--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -4,75 +4,50 @@
   <meta charset="UTF-8">
   <title>Informes Post-Partido 25/26</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
   <style>
-    /* Reset básico */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      background: #f5f5f5;
+      margin: 0;
+      padding: 20px;
       color: #333;
-      padding: 30px;
     }
 
     h1 {
       text-align: center;
-      font-size: 3rem;
+      font-size: 2.5rem;
       color: #00796b;
-      margin-bottom: 50px;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      animation: fadeIn 1.5s ease-in-out;
+      margin-bottom: 30px;
+      letter-spacing: 1px;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Grid para jornadas */
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-      justify-items: center;
+      grid-template-columns: 1fr;
+      gap: 20px;
     }
 
-    /* Tarjetas de jornada */
     .card {
       background: #ffffff;
-      border-radius: 15px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
       overflow: hidden;
-      transition: transform 0.3s, box-shadow 0.3s;
-      text-align: center;
-      width: 100%;
-      max-width: 500px;
-    }
-
-    .card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 12px 25px rgba(0,0,0,0.2);
     }
 
     .card img {
       width: 100%;
       height: auto;
       display: block;
-      border-bottom: 5px solid #00796b;
+      border-bottom: 4px solid #00796b;
     }
 
     .card a {
+      display: block;
+      padding: 12px;
       text-decoration: none;
       color: #00796b;
-      display: block;
-      padding: 15px;
       font-weight: bold;
+      text-align: center;
       font-size: 1.2rem;
     }
 
@@ -80,18 +55,24 @@
       text-decoration: underline;
     }
 
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2.2rem;
+    @media(min-width: 600px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media(min-width: 900px) {
+      .grid {
+        grid-template-columns: repeat(3, 1fr);
       }
     }
   </style>
 </head>
 <body>
+
   <h1>Informes Post-Partido 25/26</h1>
 
   <div class="grid">
-    <!-- Ejemplo de jornada -->
     <div class="card">
       <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">
         <img src="Jornada1.jpg" alt="Jornada 1">
@@ -120,7 +101,9 @@
       </a>
     </div>
 
-    <!-- Agrega más jornadas aquí siguiendo el mismo patrón -->
+    <!-- Repite el mismo patrón para todas las jornadas -->
   </div>
+
 </body>
 </html>
+
