--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -1,109 +1,154 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Informes Post-Partido 25/26</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 20px;
-      color: #333;
-    }
+<meta charset="UTF-8">
+<title>Informes Post-Partido 25/26</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(180deg, #e0f7fa, #ffffff);
+    margin: 0;
+    padding: 0;
+    color: #333;
+  }
 
-    h1 {
-      text-align: center;
-      font-size: 2.5rem;
-      color: #00796b;
-      margin-bottom: 30px;
-      letter-spacing: 1px;
-    }
+  h1 {
+    text-align: center;
+    font-size: 2.5rem;
+    color: #00796b;
+    margin: 20px 0;
+    letter-spacing: 1px;
+  }
 
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 20px;
-    }
+  .timeline {
+    position: relative;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px 10px;
+  }
 
-    .card {
-      background: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-      overflow: hidden;
-    }
+  /* Línea central */
+  .timeline::after {
+    content: '';
+    position: absolute;
+    width: 4px;
+    background-color: #00796b;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-    .card img {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-bottom: 4px solid #00796b;
-    }
+  .entry {
+    position: relative;
+    width: 90%;
+    padding: 20px;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    margin: 20px 0;
+    animation: slideIn 0.8s ease forwards;
+  }
 
-    .card a {
-      display: block;
-      padding: 12px;
-      text-decoration: none;
-      color: #00796b;
-      font-weight: bold;
-      text-align: center;
-      font-size: 1.2rem;
-    }
+  .entry img {
+    width: 100%;
+    border-radius: 8px;
+    display: block;
+    margin-bottom: 10px;
+    border-bottom: 4px solid #00796b;
+  }
 
-    .card a:hover {
-      text-decoration: underline;
-    }
+  .entry a {
+    display: block;
+    text-decoration: none;
+    color: #00796b;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.1rem;
+    padding: 10px 0;
+  }
 
-    @media(min-width: 600px) {
-      .grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
+  /* Alternar lados */
+  .entry.left {
+    left: 0;
+    transform: translateX(-50px);
+  }
 
-    @media(min-width: 900px) {
-      .grid {
-        grid-template-columns: repeat(3, 1fr);
-      }
+  .entry.right {
+    left: 50%;
+    transform: translateX(50px);
+  }
+
+  @keyframes slideIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  /* Punto en la línea */
+  .entry::before {
+    content: '';
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    background-color: #00796b;
+    border-radius: 50%;
+    top: 20px;
+    left: -8px;
+  }
+
+  .entry.right::before {
+    left: -8px; /* se ajusta para lado derecho */
+  }
+
+  @media (max-width: 768px) {
+    .entry, .entry.right, .entry.left {
+      left: 0 !important;
+      transform: translateX(0);
+      width: 90%;
     }
-  </style>
+    .timeline::after { left: 20px; }
+    .entry::before { left: -12px; }
+  }
+</style>
 </head>
 <body>
 
-  <h1>Informes Post-Partido 25/26</h1>
+<h1>Informes Post-Partido 25/26</h1>
 
-  <div class="grid">
-    <div class="card">
-      <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">
-        <img src="Jornada1.jpg" alt="Jornada 1">
-        Jornada 1
-      </a>
-    </div>
+<div class="timeline">
 
-    <div class="card">
-      <a href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing" target="_blank">
-        <img src="Jornada2.jpg" alt="Jornada 2">
-        Jornada 2
-      </a>
-    </div>
-
-    <div class="card">
-      <a href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing" target="_blank">
-        <img src="Jornada3.jpg" alt="Jornada 3">
-        Jornada 3
-      </a>
-    </div>
-
-    <div class="card">
-      <a href="#" target="_blank">
-        <img src="Jornada4.jpg" alt="Jornada 4">
-        Jornada 4
-      </a>
-    </div>
-
-    <!-- Repite el mismo patrón para todas las jornadas -->
+  <div class="entry left">
+    <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">
+      <img src="Jornada1.jpg" alt="Jornada 1">
+      Jornada 1
+    </a>
   </div>
+
+  <div class="entry right">
+    <a href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing" target="_blank">
+      <img src="Jornada2.jpg" alt="Jornada 2">
+      Jornada 2
+    </a>
+  </div>
+
+  <div class="entry left">
+    <a href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing" target="_blank">
+      <img src="Jornada3.jpg" alt="Jornada 3">
+      Jornada 3
+    </a>
+  </div>
+
+  <div class="entry right">
+    <a href="#" target="_blank">
+      <img src="Jornada4.jpg" alt="Jornada 4">
+      Jornada 4
+    </a>
+  </div>
+
+  <!-- Continúa con todas las jornadas -->
+  
+</div>
 
 </body>
 </html>
-
