--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -2,103 +2,122 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Informes Post-Partido 25/26</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <style>
-  html, body {
+  body {
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(135deg, #e8f9ff 0%, #f9f9f9 100%);
+    color: #222;
   }
 
-  body {
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-  }
-
-  .slide {
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    scroll-snap-align: start;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-  }
-
-  .overlay {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: linear-gradient(to top, rgba(0,0,0,0.6), transparent 60%);
-  }
-
-  .content {
-    position: relative;
+  h1 {
     text-align: center;
-    color: #fff;
-    z-index: 2;
+    font-size: 2.4rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 700;
+    color: #007b9e;
+    margin: 30px 10px;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 25px;
     padding: 20px;
+    max-width: 1200px;
+    margin: auto;
   }
 
-  .content h2 {
-    font-size: 3rem;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+  .card {
+    background: rgba(255,255,255,0.8);
+    backdrop-filter: blur(8px);
+    border-radius: 18px;
+    overflow: hidden;
+    box-shadow: 0 6px 25px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
   }
 
-  .content a {
+  .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+  }
+
+  .card img {
+    width: 100%;
+    height: 190px;
+    object-fit: cover;
+  }
+
+  .info {
+    padding: 15px;
+    text-align: center;
+  }
+
+  .info h2 {
+    margin: 0;
+    font-size: 1.2rem;
+    color: #007b9e;
+  }
+
+  .info p {
+    margin-top: 5px;
+    font-size: 0.95rem;
+    color: #555;
+  }
+
+  a {
     text-decoration: none;
-    padding: 12px 25px;
-    background-color: #ffeb3b;
-    color: #000;
-    font-weight: bold;
-    font-size: 1.3rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-    transition: background 0.3s;
-  }
-
-  .content a:hover {
-    background-color: #fdd835;
-  }
-
-  /* Para scroll suave */
-  html {
-    scroll-behavior: smooth;
   }
 </style>
 </head>
 <body>
 
-<div class="slide" style="background-image:url('Jornada1.jpg')">
-  <div class="overlay"></div>
-  <div class="content">
-    <h2>Jornada 1</h2>
-    <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">Ver Informe</a>
-  </div>
-</div>
+<h1>Informes Post-Partido 25/26</h1>
 
-<div class="slide" style="background-image:url('Jornada2.jpg')">
-  <div class="overlay"></div>
-  <div class="content">
-    <h2>Jornada 2</h2>
-    <a href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing" target="_blank">Ver Informe</a>
-  </div>
-</div>
+<div class="grid">
 
-<div class="slide" style="background-image:url('Jornada3.jpg')">
-  <div class="overlay"></div>
-  <div class="content">
-    <h2>Jornada 3</h2>
-    <a href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing" target="_blank">Ver Informe</a>
-  </div>
-</div>
+  <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">
+    <div class="card">
+      <img src="Jornada1.jpg" alt="Jornada 1">
+      <div class="info">
+        <h2>Jornada 1</h2>
+      </div>
+    </div>
+  </a>
 
-<!-- Repite para todas las jornadas -->
+  <a href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing" target="_blank">
+    <div class="card">
+      <img src="Jornada2.jpg" alt="Jornada 2">
+      <div class="info">
+        <h2>Jornada 2</h2>
+      </div>
+    </div>
+  </a>
+
+  <a href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing" target="_blank">
+    <div class="card">
+      <img src="Jornada3.jpg" alt="Jornada 3">
+      <div class="info">
+        <h2>Jornada 3</h2>
+      </div>
+    </div>
+  </a>
+
+  <a href="#" target="_blank">
+    <div class="card">
+      <img src="Jornada4.jpg" alt="Jornada 4">
+      <div class="info">
+        <h2>Jornada 4</h2>
+      </div>
+    </div>
+  </a>
+
+</div>
 
 </body>
 </html>
