--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -6,118 +6,176 @@
 <title>Informes Post-Partido 25/26</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
+
+  :root {
+    --azul: #00b4d8;
+    --azul-oscuro: #03045e;
+    --gris: #f2f2f2;
+  }
+
+  * { box-sizing: border-box; }
+
   body {
     margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-    background: linear-gradient(135deg, #e8f9ff 0%, #f9f9f9 100%);
-    color: #222;
+    font-family: 'Montserrat', sans-serif;
+    background: linear-gradient(120deg, var(--azul-oscuro), #001233 70%);
+    color: white;
+    overflow-x: hidden;
   }
 
-  h1 {
+  header {
     text-align: center;
-    font-size: 2.4rem;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: 700;
-    color: #007b9e;
-    margin: 30px 10px;
+    padding: 40px 20px 20px;
   }
 
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 25px;
-    padding: 20px;
-    max-width: 1200px;
-    margin: auto;
+  header h1 {
+    font-size: 2.6rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 900;
+    background: linear-gradient(90deg, var(--azul), #caf0f8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .timeline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 70px;
+    padding: 40px 20px 100px;
+    position: relative;
+  }
+
+  .timeline::before {
+    content: "";
+    position: absolute;
+    width: 5px;
+    background: var(--azul);
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0.4;
   }
 
   .card {
-    background: rgba(255,255,255,0.8);
-    backdrop-filter: blur(8px);
-    border-radius: 18px;
+    position: relative;
+    width: 90%;
+    max-width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background: rgba(255,255,255,0.1);
+    border-radius: 20px;
+    backdrop-filter: blur(6px);
+    box-shadow: 0 10px 40px rgba(0,0,0,0.4);
     overflow: hidden;
-    box-shadow: 0 6px 25px rgba(0,0,0,0.1);
-    transition: transform 0.2s ease, box-shadow 0.3s ease;
+    transform: skewX(-5deg);
   }
 
-  .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+  .card:nth-child(even) {
+    flex-direction: row-reverse;
   }
 
   .card img {
-    width: 100%;
-    height: 190px;
+    width: 50%;
+    height: 230px;
     object-fit: cover;
+    transform: skewX(5deg) scale(1.05);
   }
 
   .info {
-    padding: 15px;
-    text-align: center;
+    padding: 25px;
+    width: 50%;
+    transform: skewX(5deg);
   }
 
   .info h2 {
-    margin: 0;
-    font-size: 1.2rem;
-    color: #007b9e;
+    font-size: 1.8rem;
+    font-weight: 900;
+    margin-bottom: 10px;
+    color: var(--azul);
   }
 
   .info p {
-    margin-top: 5px;
-    font-size: 0.95rem;
-    color: #555;
+    font-size: 1rem;
+    color: #e0e0e0;
+    margin-bottom: 15px;
   }
 
-  a {
+  .info a {
     text-decoration: none;
+    color: #000;
+    background: var(--azul);
+    padding: 10px 18px;
+    border-radius: 6px;
+    font-weight: 700;
+    transition: all 0.2s;
+  }
+
+  .info a:hover {
+    background: #90e0ef;
+    color: var(--azul-oscuro);
+  }
+
+  @media (max-width: 750px) {
+    .card {
+      flex-direction: column;
+      transform: none;
+    }
+    .card img, .info {
+      width: 100%;
+      transform: none;
+    }
+    .timeline::before {
+      left: 20px;
+    }
   }
 </style>
 </head>
 <body>
 
-<h1>Informes Post-Partido 25/26</h1>
+<header>
+  <h1>Informes Post-Partido 25/26</h1>
+</header>
 
-<div class="grid">
+<section class="timeline">
 
-  <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">
-    <div class="card">
-      <img src="Jornada1.jpg" alt="Jornada 1">
-      <div class="info">
-        <h2>Jornada 1</h2>
-      </div>
+  <div class="card">
+    <img src="Jornada1.jpg" alt="Jornada 1">
+    <div class="info">
+      <h2>Jornada 1</h2>
+      <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">Ver Informe</a>
     </div>
-  </a>
+  </div>
 
-  <a href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing" target="_blank">
-    <div class="card">
-      <img src="Jornada2.jpg" alt="Jornada 2">
-      <div class="info">
-        <h2>Jornada 2</h2>
-      </div>
+  <div class="card">
+    <img src="Jornada2.jpg" alt="Jornada 2">
+    <div class="info">
+      <h2>Jornada 2</h2>
+      <a href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing" target="_blank">Ver Informe</a>
     </div>
-  </a>
+  </div>
 
-  <a href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing" target="_blank">
-    <div class="card">
-      <img src="Jornada3.jpg" alt="Jornada 3">
-      <div class="info">
-        <h2>Jornada 3</h2>
-      </div>
+  <div class="card">
+    <img src="Jornada3.jpg" alt="Jornada 3">
+    <div class="info">
+      <h2>Jornada 3</h2>
+      <a href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing" target="_blank">Ver Informe</a>
     </div>
-  </a>
+  </div>
 
-  <a href="#" target="_blank">
-    <div class="card">
-      <img src="Jornada4.jpg" alt="Jornada 4">
-      <div class="info">
-        <h2>Jornada 4</h2>
-      </div>
+  <div class="card">
+    <img src="Jornada4.jpg" alt="Jornada 4">
+    <div class="info">
+      <h2>Jornada 4</h2>
+      <a href="#" target="_blank">Ver Informe</a>
     </div>
-  </a>
+  </div>
 
-</div>
+</section>
 
 </body>
 </html>
