--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -120,7 +120,7 @@
     }
 
     .card {
-      flex-direction: column;
+      flex-direction: column !important; /* ✅ fuerza misma orientación para todos */
       transform: none;
       width: 100%;
       max-width: 100%;
@@ -191,4 +191,5 @@
 
 </body>
 </html>
+
 
