--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </a>
 
   <a
-  href="EncuestasMVP2526.html"
+  href="Encuestas_MVP2526.html"
   target="_blank">
   <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
     <em>
