--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <div style="padding: 10px; float: right; width: 45%; text-align: center;">
   <a
-    href="EncuestasMVP2526.html"
+    href="Encuestas_MVP2526.html"
     target="_blank">
     <img alt="MVP"
          class="imagen"
