--- a/index.html
+++ b/index.html
@@ -1,85 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>E.F.M.O. Boadilla 'B'</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <style>
-    body {
-      margin: 0;
-      font-family: "Trebuchet MS", sans-serif;
-      background: linear-gradient(160deg, #0d0d1a, #1a1a33);
-      color: #00fff7;
-    }
+<meta charset="UTF-8">
+<title>E.F.M.O. Boadilla 'B'</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
 
-    .title-container {
-      width: fit-content;
-      margin: 30px auto;
-      padding: 20px 40px;
-      border-radius: 20px;
-      /* Nuevo degradado azul-cian → morado */
-      background: linear-gradient(90deg, #00d4ff, #a200ff);
-      box-shadow: 0 0 20px rgba(0,212,255,0.6), 0 0 30px rgba(162,0,255,0.4);
-    }
+  body {
+    margin: 0;
+    font-family: "Trebuchet MS", sans-serif;
+    background: linear-gradient(160deg, #0b0b1f, #1c1c3d);
+    color: #00fff7;
+  }
 
-    .title {
-      font-size: 3em;
-      font-family: Oswald, fantasy;
-      font-weight: bold;
-      margin: 0;
-    }
+  /* Título con glow dinámico */
+  .title-container {
+    width: 90%; /* ocupa casi todo el ancho en móvil */
+    max-width: 700px;
+    margin: 20px auto;
+    padding: 20px 30px;
+    border-radius: 20px;
+    background: linear-gradient(90deg, #00d4ff, #ff00c8);
+    box-shadow: 0 0 25px rgba(0,212,255,0.7), 0 0 35px rgba(255,0,200,0.5);
+    animation: neonGlow 2s ease-in-out infinite alternate;
+    text-align: center;
+  }
 
-    /* Colores de las letras originales */
-    .title span:nth-child(odd) { color: hsl(0,90%,55%); }
-    .title span:nth-child(even) { color: white; }
+  @keyframes neonGlow {
+    0% { box-shadow: 0 0 20px rgba(0,212,255,0.5), 0 0 30px rgba(255,0,200,0.4); }
+    100% { box-shadow: 0 0 35px rgba(0,212,255,0.8), 0 0 50px rgba(255,0,200,0.6); }
+  }
 
+  .title {
+    font-size: 2.8em;
+    font-family: Oswald, fantasy;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .title span:nth-child(odd) { color: hsl(0,90%,55%); }
+  .title span:nth-child(even) { color: white; }
+
+  /* Paneles futuristas */
+  .panel-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    padding: 15px;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .panel {
+    background: linear-gradient(145deg, #0e0e28, #1d1d4c);
+    border-radius: 25px;
+    padding: 20px 10px;
+    text-align: center;
+    box-shadow: 0 10px 25px rgba(0,255,255,0.25), 0 0 15px rgba(255,0,200,0.2);
+    text-decoration: none;
+  }
+
+  .panel-icon {
+    font-size: 50px;
+    margin-bottom: 12px;
+    color: #ff6fff;
+    text-shadow: 0 0 8px #ff6fff, 0 0 16px #ff6fff;
+  }
+
+  .panel-title {
+    font-size: 1em;
+    font-weight: bold;
+    color: #00fff7;
+    text-shadow: 0 0 4px #00fff7;
+    font-family: "Trebuchet MS", sans-serif;
+  }
+
+  footer {
+    text-align: center;
+    padding: 25px 10px;
+    color: #00fff7;
+    font-size: 1em;
+    font-weight: bold;
+    font-family: "Trebuchet MS", sans-serif;
+    text-shadow: 0 0 5px #00fff7, 0 0 10px #00fff7;
+  }
+
+  /* Responsive móvil */
+  @media(max-width: 600px){
     .panel-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      max-width: 700px;
-      margin: 0 auto;
+      grid-template-columns: 1fr;
+      gap: 15px;
+      padding: 10px;
     }
 
     .panel {
-      background: linear-gradient(145deg, #11112a, #1b1b4d);
-      border-radius: 25px;
-      padding: 30px 20px;
-      text-align: center;
-      box-shadow: 0 10px 25px rgba(0,255,255,0.2);
-      text-decoration: none;
+      padding: 15px 10px;
     }
 
-    .panel-icon {
-      font-size: 60px;
-      margin-bottom: 15px;
-      color: #00ff99;
-    }
-
-    .panel-title {
-      font-size: 1.2em;
-      font-weight: bold;
-      color: #00fff7;
-      text-shadow: 0 0 5px #00fff7;
-      font-family: "Trebuchet MS", sans-serif;
-    }
-
-    footer {
-      text-align: center;
-      padding: 30px 20px;
-      color: #00fff7;
-      font-size: 1.2em;          /* mismo tamaño que paneles */
-      font-weight: bold;          /* negrita como paneles */
-      font-family: "Trebuchet MS", sans-serif; /* igual que paneles */
-    }
-
-    @media(max-width: 500px){
-      .panel { padding: 25px 10px; }
-      .panel-icon { font-size: 50px; }
-    }
-  </style>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    .panel-icon { font-size: 40px; }
+    .title { font-size: 2em; }
+  }
+</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -124,7 +147,9 @@
 </div>
 
 <footer>
-  Creador de la página web: <br> Gabriel Veiga Álvarez
+  Creador de la página web:<br>Gabriel Veiga Álvarez
 </footer>
+
 </body>
 </html>
+
