--- a/index.html
+++ b/index.html
@@ -14,26 +14,19 @@
     color: #00fff7;
   }
 
-  /* Título con glow dinámico */
+  /* Título con fondo degradado */
   .title-container {
-    width: 90%; /* ocupa casi todo el ancho en móvil */
+    width: 90%;
     max-width: 700px;
     margin: 20px auto;
     padding: 20px 30px;
     border-radius: 20px;
-    background: linear-gradient(90deg, #00d4ff, #ff00c8);
-    box-shadow: 0 0 25px rgba(0,212,255,0.7), 0 0 35px rgba(255,0,200,0.5);
-    animation: neonGlow 2s ease-in-out infinite alternate;
+    background: linear-gradient(90deg, #ff00c8, #00d4ff);
     text-align: center;
   }
 
-  @keyframes neonGlow {
-    0% { box-shadow: 0 0 20px rgba(0,212,255,0.5), 0 0 30px rgba(255,0,200,0.4); }
-    100% { box-shadow: 0 0 35px rgba(0,212,255,0.8), 0 0 50px rgba(255,0,200,0.6); }
-  }
-
   .title {
-    font-size: 2.8em;
+    font-size: 2.5em;
     font-family: Oswald, fantasy;
     font-weight: bold;
     margin: 0;
@@ -42,7 +35,7 @@
   .title span:nth-child(odd) { color: hsl(0,90%,55%); }
   .title span:nth-child(even) { color: white; }
 
-  /* Paneles futuristas */
+  /* Paneles futuristas en dos columnas */
   .panel-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -57,11 +50,17 @@
     border-radius: 25px;
     padding: 20px 10px;
     text-align: center;
-    box-shadow: 0 10px 25px rgba(0,255,255,0.25), 0 0 15px rgba(255,0,200,0.2);
     text-decoration: none;
+    color: #00fff7;
+    box-shadow: 0 10px 25px rgba(0,255,255,0.25), 0 0 15px rgba(255,0,200,0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .panel-icon {
+    width: 80px;
+    height: 80px;
     font-size: 50px;
     margin-bottom: 12px;
     color: #ff6fff;
@@ -89,16 +88,21 @@
   /* Responsive móvil */
   @media(max-width: 600px){
     .panel-container {
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr; /* un panel por fila */
       gap: 15px;
       padding: 10px;
     }
 
     .panel {
-      padding: 15px 10px;
+      padding: 20px;
     }
 
-    .panel-icon { font-size: 40px; }
+    .panel-icon {
+      width: 100px;
+      height: 100px;
+      font-size: 60px;
+    }
+
     .title { font-size: 2em; }
   }
 </style>
@@ -152,4 +156,5 @@
 
 </body>
 </html>
+
 
