--- a/index.html
+++ b/index.html
@@ -5,28 +5,24 @@
 <title>E.F.M.O. Boadilla 'B'</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
-
   body {
     margin: 0;
     font-family: "Trebuchet MS", sans-serif;
-    background: linear-gradient(160deg, #0b0b1f, #1c1c3d);
+    background: linear-gradient(160deg, #0d0d1a, #1a1a33);
     color: #00fff7;
   }
 
-  /* Título con fondo degradado */
   .title-container {
-    width: 90%;
-    max-width: 700px;
-    margin: 20px auto;
-    padding: 20px 30px;
+    width: fit-content;
+    margin: 30px auto;
+    padding: 20px 40px;
     border-radius: 20px;
-    background: linear-gradient(90deg, #ff00c8, #00d4ff);
-    text-align: center;
+    background: linear-gradient(90deg, #00d4ff, #a200ff);
+    box-shadow: 0 0 20px rgba(0,212,255,0.6), 0 0 30px rgba(162,0,255,0.4);
   }
 
   .title {
-    font-size: 2.5em;
+    font-size: 3em;
     font-family: Oswald, fantasy;
     font-weight: bold;
     margin: 0;
@@ -35,75 +31,50 @@
   .title span:nth-child(odd) { color: hsl(0,90%,55%); }
   .title span:nth-child(even) { color: white; }
 
-  /* Paneles futuristas en dos columnas */
   .panel-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
-    padding: 15px;
-    max-width: 800px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    max-width: 700px;
     margin: 0 auto;
   }
 
   .panel {
-    background: linear-gradient(145deg, #0e0e28, #1d1d4c);
+    background: linear-gradient(145deg, #11112a, #1b1b4d);
     border-radius: 25px;
-    padding: 20px 10px;
+    padding: 30px 20px;
     text-align: center;
+    box-shadow: 0 10px 25px rgba(0,255,255,0.2);
     text-decoration: none;
-    color: #00fff7;
-    box-shadow: 0 10px 25px rgba(0,255,255,0.25), 0 0 15px rgba(255,0,200,0.2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 
   .panel-icon {
-    width: 80px;
-    height: 80px;
-    font-size: 50px;
-    margin-bottom: 12px;
-    color: #ff6fff;
-    text-shadow: 0 0 8px #ff6fff, 0 0 16px #ff6fff;
+    font-size: 60px;
+    margin-bottom: 15px;
+    color: #00ff99;
   }
 
   .panel-title {
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: bold;
     color: #00fff7;
-    text-shadow: 0 0 4px #00fff7;
+    text-shadow: 0 0 5px #00fff7;
     font-family: "Trebuchet MS", sans-serif;
   }
 
   footer {
     text-align: center;
-    padding: 25px 10px;
+    padding: 30px 20px;
     color: #00fff7;
-    font-size: 1em;
-    font-weight: bold;
-    font-family: "Trebuchet MS", sans-serif;
-    text-shadow: 0 0 5px #00fff7, 0 0 10px #00fff7;
+    font-size: 1.2em;        /* igual que panel-title */
+    font-weight: bold;        /* igual que panel-title */
+    font-family: "Trebuchet MS", sans-serif; /* igual que panel-title */
   }
 
-  /* Responsive móvil */
-  @media(max-width: 600px){
-    .panel-container {
-      grid-template-columns: 1fr; /* un panel por fila */
-      gap: 15px;
-      padding: 10px;
-    }
-
-    .panel {
-      padding: 20px;
-    }
-
-    .panel-icon {
-      width: 100px;
-      height: 100px;
-      font-size: 60px;
-    }
-
-    .title { font-size: 2em; }
+  @media(max-width: 500px){
+    .panel { padding: 25px 10px; }
+    .panel-icon { font-size: 50px; }
   }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -156,5 +127,3 @@
 
 </body>
 </html>
-
-
