--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -108,7 +108,7 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:3, name:'Álvaro', pos:'Portero', status:'OK', performances:[
+  { id:3, name:'Álvaro', pos:'Portero', status:'Duda', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
     {points:null, minutes:36, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
@@ -123,7 +123,7 @@ const players = [
     {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', performances:[
+  { id:6, name:'Rafa Crooke', pos:'Defensa', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
@@ -138,12 +138,12 @@ const players = [
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:9, name:'Adriano', pos:'Defensa', status:'Duda', performances:[
+  { id:9, name:'Adriano', pos:'Defensa', status:'OK', performances:[
     {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
     {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', performances:[
+  { id:10, name:'Á. Infante', pos:'Defensa', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
@@ -153,7 +153,7 @@ const players = [
     {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
-  { id:12, name:'Lucas Lausín', pos:'Defensa', status:'OK', performances:[
+  { id:12, name:'L. Lausín', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
@@ -226,15 +226,17 @@ const players = [
 
 // 📰 Noticias del equipo
 const news = [
+  { playerId: 10, title: 'Duda', text: "Enfermedad, 2-7 días" },
+  { playerId: 6, title: 'Duda', text: "Enfermedad, 3-7 días" },
+  { playerId: 3, title: 'Duda', text: "Esguince en el pie, 1-3 semanas" },
   { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" },
-  { playerId: 9, title: 'Duda', text: "Golpe en el talón, 2-4 días" },
   { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
   { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones" },
   { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 3-6 semanas" },
   { playerId: 2, title: 'Duda', text: "Enfermedad, 2-7 días" },
   { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
-  { playerId: 19, title: 'Lesión', text: "Desconocido, 2 semanas" },
-  { playerId: 21, title: 'Lesión', text: "Desconocido, baja indeterminada" }
+  { playerId: 19, title: 'Lesión', text: "Lesión en los isquios, 4-6 semanas" },
+  { playerId: 21, title: 'Lesión', text: "Desconocido, 1 mes" }
 ];
   
 // Render helpers
