--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -23,12 +23,13 @@
 </head>
 <body class="bg-slate-900 text-slate-100 antialiased">
 <div class="max-w-6xl mx-auto p-6">
-  <header class="flex items-center justify-between mb-6">
-    <div>
-      <h1 class="text-2xl font-extrabold">Fantasy EFMO</h1>
-      <p class="text-slate-400 text-sm">Puntos, estadísticas, y mucho más</p>
-    </div>
-  </header>
+  <header class="text-center mb-8">
+  <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight">
+    <span class="bg-gradient-to-r from-amber-300 via-yellow-400 to-orange-500 bg-clip-text text-transparent drop-shadow-sm">
+      Fantasy EFMO
+    </span>
+  </h1>
+</header>
 
   <main class="grid lg:grid-cols-3 gap-6">
     <section class="glass p-4 rounded-lg lg:col-span-1">
