--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -159,7 +159,7 @@
     <img src="Jornada4.jpg" alt="Jornada 4">
     <div class="info">
       <h2>Jornada 4</h2>
-      
+      <a href="pruebainformes.html" target="_blank">Ver Informe</a>
     </div>
   </div>
 
