--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -500,7 +500,7 @@
 <body>
 
 <div class="container-informe">
-  <a href="index.html" class="btn-volver">← Volver a Todos los Informes</a>
+  <a href="InformesPost_partido.html" class="btn-volver">← Volver a Todos los Informes</a>
 
   <div class="header-informe">
     <h1>Jornada 4 - Análisis Completo</h1>
@@ -888,3 +888,4 @@
 
 </body>
 </html>
+
